--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "tsc --watch & node --watch dist/index.js",
+    "start": "tsc --watch & node --watch dist/cmd/server.js",
     "build": "rm -R dist && tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
