--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "tsc --watch & node --watch dist/cmd/server.js",
-    "build": "rm -R dist && tsc",
+    "start": "node dist/cmd/server.js",
+    "dev": "tsc --watch & node --watch dist/cmd/server.js",
+    "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
